I have apparently created two repositories. One of which I am not sure is going to upload to the correct setting for grading. As such I am attempting to see if my commit/push will work here into the other repository.

--- a/hw1.Rmd
+++ b/hw1.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(echo = TRUE, commen = NA)
 x<-FALSE
 y<-FALSE
 distance<-0
+#nothing
 options(warn=0)
 the_hamming_distance<-0
 mh_distance <- function(x,y){
